# interview-companion

./: .env.example  .env.local.example  .gitignore  .vercel-db-config  CI-CD.md  DB-MIGRATION-LOG.md  HUD_REDESIGN_SUMMARY.md  JOB-POSITIONS.md  ORG_ISOLATION_AUDIT_COMPLETE.md  PLAN-cv-analysis.md  PLAN-onboarding-profiles.md  PLAN-organizations.md  PROFILE_BUILDER_IMPLEMENTATION.md  README.md  REALTIME_MIGRATION_SUMMARY.md  candidates-comparison.md  job-profile.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: build.yml
docs/architecture/: project-overview.md  repo-structure.md  tech-stack.md
docs/contracts/: api-schemas.md  database-models.md  shared-types.md
docs/meta/: tech-debt.md
docs/patterns/: coding-conventions.md  error-handling.md  security-patterns.md  testing-patterns.md
docs/shared/: llm-failover-patterns.md  supabase-edge-functions-guide.md  tauri-nextjs-integration.md
drizzle/: 0000_blue_absorbing_man.sql  0001_sturdy_skaar.sql  0003_add_job_positions.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
extension/: background.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js
extension/store-assets/: listing.md
public/: llms-full.txt  llms.txt  robots.txt
scripts/: apply-migration.sh  publish-docs.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs
src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
src/components/: DashboardNav.tsx  InsightCard.tsx  (+6 more)
supabase/: config.toml
(+91 files in other folders)
