[package]
name = "interview-companion"
version = "0.1.0"
description = "AI-powered real-time interview analysis copilot"
authors = ["Agustin Montoya"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

# Audio capture
cpal = "0.15"

# Async runtime for WebSocket
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client for Edge Function calls
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Timestamps
chrono = "0.4"

# Lazy static for global state
lazy_static = "1.5"

# Error handling
anyhow = "1.0"
